--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,6 +90,18 @@ header{
             }
         }
     }
+    .more{
+        .row{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        i{
+            font-size: 1.3rem;
+            color: #4B85F0;
+            margin: 0 5px;
+        }
+    }
 }
 
 .hero{
