--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -13,6 +13,10 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            h3{
+                color: #4B85F0;
+                font-weight: 600;
+            }
         }
         .btn{
             margin: auto;
