--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,12 +157,6 @@ header{
     }
 }
 
-form{
-    #type-appartement{
-        appearance: none;
-    }
-}
-
 
 .location, .vente{
     display: flex;
@@ -313,6 +307,20 @@ form{
     //         text-align: center;
     //     }
     // }
+}
+
+.why-us{
+    font-size: xx-large;
+    grid-template-columns: 1fr 1fr;
+    margin: 10px 10%;
+        text-align: center;
+    h2{ 
+        margin-right: 10px;
+        line-height: 170%;
+    }p{
+        opacity: 0.7;
+    }
+
 }
 
 footer{
